Fix user controls dropdown on mobile

--- a/resources/less/components/list.less
+++ b/resources/less/components/list.less
@@ -34,9 +34,12 @@
                 color: #fff !important;
             }
         }
-        .Dropdown-menu {
-            // for not overlapping header
-            z-index: @zindex-header - 1;
+
+        @media @tablet-up {
+            .Dropdown-menu {
+                // for not overlapping header
+                z-index: @zindex-header - 1;
+            }
         }
     }
 
